--- a/com_test_flutter_app/pubspec.yaml
+++ b/com_test_flutter_app/pubspec.yaml
@@ -52,10 +52,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Condensed_Bold
+      fonts:
+        - asset: fonts/DIN_Condensed_Bold.ttf
+          weight: 700
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
